proposal1 copy/css/base-layout.css
/* BASE LAYOUT FLEXBOX */
@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap");

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

body {
	margin: 0;
	background-color: whitesmoke;
	font-family: "Fira Code";
	line-height: 1.5;
	font-size: 14px;
	overflow-x: hidden;
}
/*Home page */
.container {
	width: 90%;
	margin: 0 auto;
	display: flex;
	justify-content: space-between;
	align-items: flex-start;
	gap: 5px;
}

.text-list-container {
	gap: 40px;
	flex: 1;
	align-self: center;
}

.text-section {
	flex: 1;
	background-color: #333;
	color: white;
	padding: 30px 20px;
	height: fit-content;
	width: 80%;
	position: relative;
	box-sizing: border-box;
	clip-path: polygon(78% 0%, 90% 50%, 78% 100%, 0% 100%, 0 0);

	.txtbs {
		width: 84%;
	}

	h1 {
		margin-top: -10px;
	}

	p {
		margin-bottom: 20px;
	}
}

.list-section {
	position: relative;
	padding: 70px;
	background-color: #f1f1f1;
	color: #333;
	max-width: 40%;
	box-sizing: border-box;

	clip-path: polygon(25% 5%, 75% 5%, 100% 50%, 75% 95%, 25% 95%, 0% 50%);
	z-index: 1;
	text-align: center;
}

.list-section h2 {
	font-size: 28px;
}

.list-section ul {
	list-style: none;
	padding: 10px;
	margin-left: 20px;
	font-size: 14px;
	text-align: center;
}

.list-section ul li {
	margin-bottom: 10px;
}

.list-section ul li:nth-child(odd) {
	text-align: left;
}

.list-section ul li:nth-child(even) {
	text-align: left;
}

.image-section {
	margin-left: 24%;
	margin-top: 80px;
	position: absolute;
	z-index: 2;
	img {
		width: 750px;
		filter: brightness(110%) saturate(112%) hue-rotate(-3deg);
	}
}
/* inschrijven*/

.apply-container {
	max-width: 1200px;
	margin: 0 auto;
	padding: 2rem;
}

.text-apply {
	text-align: center;
	margin-bottom: 3rem;
}
.text-apply h1 {
	margin-right: 140px;
}

.text-apply p {
	margin-left: 350px;
	margin-right: 250px;
	text-align: left;
}

.buttons-row {
	display: flex;
	justify-content: space-between;
	align-items: flex-start;
	gap: 2rem;
	flex-wrap: wrap;
}

.button-item {
	flex: 1;
	min-width: 250px;
	text-align: center;
	padding: 1rem;
}

.button-item h4 {
	margin-bottom: 1rem;
}

.button-item p {
	margin-bottom: 1.5rem;
}

@media (max-width: 1024px) {
	.buttons-row {
		justify-content: center;
	}

	.button-item {
		flex: 0 1 calc(50% - 2rem);
	}
}

@media (max-width: 600px) {
	.button-item {
		flex: 0 1 100%;
	}
}

/* Make it responsive */
@media (max-width: 1024px) {
	.text-apply-container {
		grid-template-columns: repeat(2, 1fr);
	}
}

@media (max-width: 600px) {
	.text-apply-container {
		grid-template-columns: 1fr;
	}
}

.text-apply-container p {
	margin-bottom: 30px;
	margin-left: 50px;
	margin-right: 50px;
}

.text-apply-container h4 {
	margin-left: 50px;
	margin-right: 50px;
}

.text-apply-container a {
	margin-left: 50px;
	margin-right: 50px;
}

/*opleiding*/
/*links*/
.container4 {
	width: 100%;
	max-width: 1200px;
	margin: 0 auto;
	clip-path: polygon(
		0% 20%,
		0% 0%,
		60% 0%,
		100% 60%,
		100% 100%,
		90% 100%,
		0% 100%
	);
}

.content4 {
	display: flex;
	position: relative;
	margin: 20px 0;
}

.left-section4 {
	flex: 2;
	height: 600px;
	padding: 30px;
	color: #ffffff;
	background-color: #333;

	position: relative;
	z-index: 1;
}

.left-section4 p {
	margin: 10px;
	margin-left: 10px;
	margin-right: 400px;
}

.opleiding h2 {
	color: #333;
	margin: 10px;
	text-align: left;
	margin-left: 160px;
}

.right-section4 {
	flex: 1;
	height: 50%;
	display: flex;
	justify-content: center;
	align-items: center;
	position: relative;
	z-index: 2;
	background: #333;
}

.opl-img {
	position: absolute;
	margin-top: -490px;
	margin-left: 61%;
	width: 100%;
	max-width: 700px;
	height: auto;
	border-radius: 10px;
}

.opl-img1 {
	position: absolute;
	margin-top: -400px;
	margin-left: -7%;

	width: 100%;
	max-width: 700px;
	height: auto;
	border-radius: 10px;
}

.spatie {
	padding: 10px;
	margin-left: 190px;
}
.opleiding {
	margin-top: 150px;
}
.opleiding h3 {
	text-align: left;
	margin-left: 10px;
}

/*vakken*/
.container3 {
	display: flex;
	align-items: center;
	gap: 230px;
	margin-top: -90px;
	padding: 10px;
}

.image-section3 {
	flex: 1;
}

.content3 {
	flex: 2;
}

.vakkenimg2 {
	max-width: 600px;
	height: 610px;
	margin-left: -165px;
}

.right-section3 h3 {
	color: whitesmoke;
	text-align: center;
	padding-top: 40px;
	margin-right: 400px;
	margin-left: 220px;
}

.right-section3 p {
	margin-top: 10px;
	color: whitesmoke;
	margin-left: 220px;
	margin-right: 150px;
}

.meerinfo {
	margin-left: 210px;
	padding: 10px;
	margin-top: 40px;
}

.right-section3 {
	max-width: 600px;
	height: 400px;

	clip-path: polygon(
		30% 0%,
		0% 0%,
		100% 0%,
		100% 100%,
		0% 100%,
		30% 100%,
		0% 50%
	);
	background-color: #333;
	margin-left: 160px;
}
.right-section2 {
	max-width: 600px;
	height: 400px;

	clip-path: polygon(
		70% 100%,
		100% 100%,
		100% 10%,
		100% 100%,
		0% 100%,
		0% -70%,
		100% 50%
	);
	background-color: #333;
	margin-left: 70px;
	margin-top: 0px;
}

.right-section2 h3 {
	color: whitesmoke;
	text-align: center;
	padding-top: 20px;
	margin-left: -370px;
}

.right-section2 p {
	margin-top: 10px;
	color: whitesmoke;
	margin-left: 70px;
	margin-right: 250px;
}

.meerinfo1 {
	margin-left: 60px;
	padding: 10px;
	margin-top: 40px;
}
.vakken1 {
	margin-top: 150px;
}

.vakken1 h2 {
	text-align: left;
	margin-left: 150px;
}

.vakkenimg3 {
	margin-left: 450px;
	margin-top: 0px;
	height: 400px;
	width: auto;
	margin-top: 22px;
}

/* kosten */

.costs_enrollment {
	margin-top: 5%;
	max-width: 100%;
	width: 1200px;
	height: 600px;
}
.content_enrollment p {
	line-height: 3.5rem;
}

table {
	border-collapse: collapse;
	margin-top: 50px;
	margin-left: 200px;
}

th,
td {
	border: 1px solid black;
	padding: 15px;
	text-align: center;
}

th {
	border-bottom: 3px solid;
}

.empty {
	border: none;
}

.kostimage {
	position: relative;
	max-width: 100%;
	min-height: auto;
	width: 400px;
	margin-left: 700px;
	margin-top: -500px;
	margin-bottom: 20px;
}
/* ... */

